--- a/index.html
+++ b/index.html
@@ -258,9 +258,9 @@
     <nav>
         <a href="#seccion1">TRES ECOS </a>
         <a href="#seccion2">Pieza</a>
-        <a href="#seccion3">Ecos 1</a>
-        <a href="#seccion4">Ecos 2</a>
-        <a href="#seccion5">Ecos 3</a>
+        <a href="#seccion3">Plastico</a>
+        <a href="#seccion4">Textil</a>
+        <a href="#seccion5">Automotriz</a>
     </nav>
 
     <!-- Carrusel de imágenes al inicio de la página -->
@@ -292,7 +292,7 @@
     </section>
 
     <section id="seccion3" class="section-content">
-        <h2>plastico</h2>
+        <h2>Plastico</h2>
        
         <p>Las empresas de la industria del plástico que han sido identificadas como contaminantes del río Lerma incluyen varias que han sido clausuradas por la Procuraduría Federal de Protección al Ambiente (PROFEPA). Entre estas empresas se encuentran aquellas localizadas en los estados de México, Michoacán y Querétaro, donde se ha llevado a cabo la mayoría de las clausuras debido a la contaminación industrial​ (https://www.gob.mx/profepa/prensa/clausura-profepa-31-empresas-por-contaminacion-en-el-rio-lerma)
             La información específica sobre los nombres de las empresas de la industria del plástico no siempre se divulga públicamente, pero se sabe que la industria plástica es una de las muchas que contribuyen a la contaminación del río. Esta contaminación incluye residuos peligrosos y descargas de aguas residuales no tratadas adecuadamente​​.
@@ -309,7 +309,7 @@
      
 
     <section id="seccion4" class="section-content">
-        <h2>textil</h2>
+        <h2>Textil</h2>
         <p>En la industria textil, algunas empresas han sido señaladas por contaminar el río Lerma y otras corrientes de agua en México. Dos ejemplos prominentes son Kaltex y Lavamex.
 
             Kaltex, ubicada en San Juan del Río, Querétaro, y Lavamex, en Aguascalientes, han sido mencionadas en informes de Greenpeace por descargar sustancias peligrosas en los ríos cercanos a sus instalaciones. Estos procesos incluyen el teñido y lavado de mezclilla, un producto clave en la industria textil mexicana. Entre los contaminantes identificados en los efluentes de estas plantas se encuentran el nonilfenol, que puede causar trastornos hormonales, así como otros compuestos tóxicos para la vida acuática como benzotriazoles y fosfato de tributilo​ 
