--- a/index.html
+++ b/index.html
@@ -349,6 +349,8 @@ La contaminación del río Lerma es un problema complejo que involucra a múltip
             "imagen1.jpg",
             "imagen6.jpg",
             "imagen7.png",
+            "imagen8.jng"
+
         ];
 
         let currentImageIndex = 0;
